# claude-code-orchestra

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agent/commands/: init.md
.agent/skills/codex-system/: SKILL.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md  general-purpose.md  lib-researcher.md  refactorer.md
.claude/docs/: DESIGN.md  orchestra-install-design.md
.claude/docs/libraries/: _TEMPLATE.md
.claude/docs/research/: cli-logging-best-practices.md  cli-vs-mcp-comparison.md
.claude/hooks/: agent-router.py  check-codex-after-plan.py  check-codex-before-write.py  lint-on-save.py  log-cli-tools.py  notify-handoff.py  post-implementation-review.py  post-test-analysis.py  remind-bash-syntax.py  remind-plan-copy-on-stop.py  remind-session-end.py  suggest-gemini-research.py
.claude/rules/: cli-reference.md  codex-delegation.md  dev-environment.md  gemini-delegation.md  testing.md
.claude/skills/checkpointing/: SKILL.md  checkpoint.py
.claude/skills/codex-system/: SKILL.md
.claude/skills/consult-codex/: SKILL.md
.claude/skills/consult-gemini/: SKILL.md
.claude/skills/design-tracker/: SKILL.md
.claude/skills/gemini-system/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/plan/: SKILL.md
.codex/: AGENTS.md
.codex/commands/: analyze.md  consult.md  review-architecture.md  update-design.md
.codex/skills/: design-tracker
.gemini/: GEMINI.md
scripts/: orchestra-doctor.py
tests/: test_hooks.py
(+16 files in other folders)
